update the java quardTree